--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
     </style>
     <span>n = </span>
     <input class="input" type="number" id="n">
-    <button onclick="createFunc()">Create</button>
+    <button onclick="Create()">Create</button>
     <br>
     <div class="parent" id="parent"></div>
     <br>
-    <button onclick="myfunc()">solve</button>
+    <button onclick="Solve()">solve</button>
     <div id="answer"></div>
 </body>
 <script>
-    let table = document.createElement("table");
+
 
 
     let a = [];
@@ -54,7 +54,16 @@
 
     const variables = {};
 
-    function createFunc() {
+    function Create() {
+        let table = document.createElement("table");
+        document.getElementById("parent").innerHTML = "";
+        a = [];
+        c = [];
+        b = [];
+        f = [];
+        a.push(0);
+        document.getElementById('answer').innerHTML = "";
+
         let n = document.getElementById('n').value;
         count = 0;
         let temp = 1;
@@ -96,6 +105,7 @@
             count++;
             temp = 0;
         }
+        document.getElementById("parent").append(table);
     }
 
 
@@ -122,7 +132,14 @@
     }
 
 
-    function myfunc() {
+    function Solve() {
+        a = [];
+        c = [];
+        b = [];
+        f = [];
+        a.push(0);
+        document.getElementById('answer').innerHTML = "";
+
         let n = document.getElementById('n').value;
         count = 0;
         let temp = 1;
@@ -162,7 +179,6 @@
         }
     }
 
-    document.getElementById("parent").append(table);
 
 
 </script>
